--- a/src/pages/admin-create.ejs
+++ b/src/pages/admin-create.ejs
@@ -14,6 +14,8 @@
       </div>
         <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
           <form id="new-user-form" class="space-y-6" action="/api/users" method="POST">
+            <input id="__csrfToken" type="hidden" value="<%= csrfToken %>">
+
             <div>
               <label for="firstName" class="block text-sm font-medium leading-6 text-gray-900">First name</label>
               <div class="mt-2">
@@ -88,6 +90,7 @@
         const lastName = document.getElementById('lastName').value;
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
+        const csrfToken = document.getElementById('__csrfToken').value;
 
         const response = await fetch(form.action, {
           method: form.method,
@@ -99,7 +102,8 @@
             firstName,
             lastName,
             email,
-            password
+            password,
+            csrfToken,
           })
         });
 
